# sheet-shark

./: .envrc  Cargo.toml  Dockerfile  LICENSE.txt  README.md  install.sh
.config/: config.json5
.github/workflows/: cd.yml  ci.yml
install/: config.yaml  sheet-shark.desktop  sheet-shark.xcf
migrations/2025-07-13-204619_base_sheets/: down.sql  up.sql
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  layout.rs  main.rs  persist.rs  schema.rs  shared.rs  tui.rs  widgets.rs
src/components/: calendar.rs  fps.rs  home.rs  statusbar.rs
src/components/calendar/: export.rs  widgets.rs
src/components/calendar/export/: jira.rs
src/components/home/: action.rs  draw.rs  editing.rs  export.rs  key_handling.rs  movement.rs  persist_handling.rs  state.rs
src/components/home/editing/: description.rs  duration.rs  edit.rs  project.rs  select.rs  shared.rs  ticket.rs  time.rs
src/components/home/editing/shared/: bufedit.rs  movement.rs
src/components/home/export/: csv.rs  json.rs
src/persist/: handle.rs  model.rs  schema.rs
src/shared/: defrag.rs  summary.rs
