[package]
name         = "sheet-shark"
version      = "0.1.0"
edition      = "2024"
authors      = ["Philipp Nowak <sheetshark@phnowak.eu>"]
license      = "MIT"
rust-version = "1.85.0"

[dependencies]
anyhow           = "1.0.98"
dotenvy = "0.15.7"
human-panic      = "2.0.2"
tokio            = { version = "1.45.1", features = ["full"] }
tui-realm-stdlib = "3.0.0"
tuirealm         = "3.0.1"
