[package]
name         = "sheet-shark"
version      = "0.1.0"
edition      = "2024"
description  = " Funny CLI fish to help with timesheets "
authors      = ["Philipp Nowak <sheet-shark@lit.plus>"]
build        = "build.rs"
repository   = "https://github.com/literalplus/sheet-shark"
rust-version = "1.85.0"

[dependencies]
better-panic = "0.3.0"
chrono = "0.4.41"
clap = { version = "4.5.47", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.15.15"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "6.0.0"
enum_dispatch = "0.3.13"
futures = "0.3.31"
human-panic = "2.0.3"
humantime = "2.2.0"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.175"
pretty_assertions = "1.4.1"
ratatui = { version = "0.29.0", features = ["serde", "macros", "widget-calendar"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.143"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "serde"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
type-safe-id = "0.3.3"
time = { version = "0.3.43", features = ["local-offset", "formatting", "parsing", "macros"] }
educe = "0.6.0"
itertools = "0.14.0"


[build-dependencies]
anyhow     = "1.0.99"
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }
